--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
 		<script type="text/javascript" src="./js/materialize.min.js"></script>
 		<script src="./js/ui.js" defer></script>
 		<link rel="manifest" href="./manifest.json" />
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="96x96"
+			href="img/icons/favicon.png"
+		/>
 	</head>
 	<body class="grey lighten-4">
 		<!-- top nav -->
