--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
 			sizes="96x96"
 			href="img/icons/favicon.png"
 		/>
+		<link rel="icon" sizes="512x512" href="img/icons/icon-512x512.png" />
+		<link rel="icon" sizes="192x192" href="img/icons/icon-192x192.png" />
+		<link rel="icon" sizes="144x144" href="img/icons/icon-144x144.png" />
+		<link rel="icon" sizes="96x96" href="img/icons/icon-96x96.png" />
+		<link rel="icon" sizes="72x72" href="img/icons/icon-72x72.png" />
 	</head>
 	<body class="grey lighten-4">
 		<!-- top nav -->
