--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 		<link type="text/css" href="./css/styles.css" rel="stylesheet" />
 		<script type="text/javascript" src="./js/materialize.min.js"></script>
 		<script src="./js/ui.js" defer></script>
+		<script src="./js/app.js" defer></script>
+
 		<link rel="manifest" href="./manifest.json" />
 		<link
 			rel="icon"
