--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		<script src="./js/app.js" defer></script>
 
 		<link rel="manifest" href="./manifest.json" />
+		<script src="./js/firestoreDishes.js" type="module" defer></script>
 		<link
 			rel="icon"
 			type="image/png"
