--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 		/>
 		<link type="text/css" href="./css/styles.css" rel="stylesheet" />
 		<script type="text/javascript" src="./js/materialize.min.js"></script>
-		<script src="./js/ui.js" defer></script>
-		<script src="./js/app.js" defer></script>
+		<script src="./js/ui.js" type="module" defer></script>
+		<script src="./js/app.js" type="module" defer></script>
 
 		<link rel="manifest" href="./manifest.json" />
 		<script src="./js/firestoreDishes.js" type="module" defer></script>
